--- a/src/pages/Messages/index.scss
+++ b/src/pages/Messages/index.scss
@@ -1,22 +1,23 @@
 .Messages-page {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(233, 233, 233, 0.795);
-    min-height: 100vh;
-    overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(233, 233, 233, 0.795);
+  min-height: 100vh;
+  overflow: hidden;
+  .ChatList {
+    width: 30%;
+  }
+  .ChatContent {
+    flex: 1;
+  }
+  @media only screen and (max-width: 1023px) {
+    flex-direction: column;
+    .ChatContent,
     .ChatList {
-        width: 30%;
+      margin: 10px;
+      width: 80%;
+      max-width: fit-content;
     }
-    .ChatContent {
-        flex: 1;
-    }
-    @media only screen and (max-width: 1023px) {
-        flex-direction: column;
-        .ChatContent, .ChatList {
-            margin: 10px;
-            width: 80%;
-            max-width: fit-content;
-        }
-    }
+  }
 }
